<resources>
    <string name="app_name">Restaurtanat Food Delivery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rutuja Shelke</string>
    <string name="nav_header_subtitle">rutujashelke3010@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_dailymeal">Daily Meal</string>
    <string name="menu_favourite">Favourite</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="password1">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="menu_mycart">mycart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="min_45">Min-$45</string>
</resources>