<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg4"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-262dp"></ImageView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="My Restaurant App"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2"></TextView>


    <TextView
        android:id="@+id/textview6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Register"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </TextView>

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/ed_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#cccccc"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="14dp"
        android:hint="@string/full_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textview6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview6"
        app:layout_constraintWidth_percent=".8"></EditText>

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#cccccc"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="14dp"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_name"
        app:layout_constraintWidth_percent=".8"></EditText>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#cccccc"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="14dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        app:layout_constraintWidth_percent=".8"></EditText>


    <Button
        android:id="@+id/reg_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:padding="4dp"
        android:onClick="home"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password"
        app:layout_constraintWidth_percent=".7" />
    <TextView
        android:id="@+id/accountexist_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account ?"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias=".4"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn" />

<!--    <TextView-->
<!--        android:id="@+id/reg_sigintxt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="62dp"-->
<!--        android:layout_marginBottom="60dp"-->
<!--        android:text="Sign In"-->
<!--        android:onClick="Signin"-->
<!--        android:textColor="@color/red"-->
<!--        android:textSize="16dp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintHorizontal_bias="0"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/accountexist_txt"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/reg_btn" />-->

    <TextView
        android:id="@+id/reg_sigintxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SignIn"
        android:onClick="signinpage"
        android:textColor="@color/red"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accountexist_txt"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>